--- a/index.html
+++ b/index.html
@@ -45,12 +45,35 @@
       <!-- Main container with navigation and header content -->
       <div
         class="relative flex flex-wrap items-center justify-between w-full shrink-0"
-        <div></div>
-        <div></div>
+      >
+        <div class="px-4">
+          <img
+            class="h-8"
+            src="/assets/component-1/navigation/cache-bank-logo.png"
+          />
+        </div>
+        <div class="md:flex items-center justify-between text-black">
+          <a
+            class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+            >Product</a
+          >
+          <a
+            class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+            >Features</a
+          >
+          <a
+            class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+            >Get Started</a
+          >
+          <a
+            class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+            >Contact</a
+          >
+        </div>
         <div></div>
         <button></button>
         <div></div>
-      ></div>
+      </div>
     </div>
 
     <div class="w-full">
