--- a/index.html
+++ b/index.html
@@ -52,40 +52,123 @@
             src="/assets/component-1/navigation/cache-bank-logo.png"
           />
         </div>
-        <div class="md:flex items-center justify-between text-black">
+        <div
+          class="hidden md:flex items-center justify-between text-black gap-12"
+        >
           <a
             class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+            href="#product"
             >Product</a
           >
           <a
             class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+            href="#features"
             >Features</a
           >
           <a
             class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+            href="#pricing"
             >Get Started</a
           >
           <a
             class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+            href="#contact"
             >Contact</a
           >
         </div>
-        <div></div>
-        <button></button>
-        <div></div>
+        <div class="hidden gap-8 p-4 items-center md:flex">
+          <button
+            class="text-sm font-normal text-dark-grey-800 hover:text-dark-grey-900"
+          >
+            Log in
+          </button>
+          <button
+            class="px-4 py-2 text-sm font-bold text-blue bg-green-500 rounded-xl hover:bg-pink-500"
+          >
+            Sign up
+          </button>
+        </div>
+        <button class="p-4 md:hidden" id="mobile-menu-toggle">
+          <svg
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            class="h-6 w-6"
+            fill="none"
+          >
+            <g clip-path="url(#clip0_429_11066)">
+              <path
+                d="M3 6.00092H21M3 12.0009H21M3 18.0009H21"
+                stroke="#292929"
+                stroke-width="2.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </g>
+            <defs>
+              <clipPath id="clip0_429_11066">
+                <rect
+                  width="24"
+                  height="24"
+                  fill="white"
+                  transform="translate(0 0.000915527)"
+                />
+              </clipPath>
+            </defs>
+          </svg>
+        </button>
+        <div
+          class="absolute hidden md:hidden flex md:flex flex-col items-start justify-center w-full gap-3 overflow-hidden bg-white max-h-screen top-full px-4 py-8 shadow-main"
+          id="mobile-menu"
+        >
+          <a
+            class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+            href="#product"
+            >Product</a
+          >
+          <a
+            class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+            href="#features"
+            >Features</a
+          >
+          <a
+            class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+            href="#pricing"
+            >Get Started</a
+          >
+          <a
+            class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+            href="#company"
+            >Contact</a
+          >
+
+          <button
+            class="text-sm font-normal text-dark-grey-800 hover:text-dark-grey-900"
+          >
+            Log in
+          </button>
+          <button
+            class="px-4 py-2 text-sm font-bold text-blue bg-green-500 rounded-xl hover:bg-pink-500"
+          >
+            Sign up
+          </button>
+        </div>
       </div>
     </div>
-
-    <div class="w-full">
+    <!--Component 2 -->
+    <div class="w-full" id="product">
       <!-- Wide full-width container for additional content -->
     </div>
-    <div class="container mx-auto">
+    <!--Component 3 -->
+    <div class="container mx-auto" id="features">
       <!-- Centered container for more content -->
     </div>
-    <div class="w-full">
+    <!--Component 4 -->
+    <div class="w-full" id="pricing">
       <!-- Wide full-width container for additional content -->
     </div>
-    <div class="w-full">
+    <!--Component 5 contact -->
+    <div class="w-full" id="getStarted" id="company">
       <!-- Wide full-width container for additional content -->
     </div>
   </div>
@@ -95,6 +178,13 @@
   <div class="w-full bg-green-500">
     <!-- Full-width footer container with green background -->
   </div>
+  <script>
+    document
+      .getElementById("mobile-menu-toggle")
+      .addEventListener("click", function () {
+        document.getElementById("mobile-menu").classList.toggle("hidden");
+      });
+  </script>
   <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/countup.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/countto.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/leaflet.js"></script>
