--- a/index.html
+++ b/index.html
@@ -305,7 +305,9 @@
       </div>
 
       <!--card section-->
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 mt-20">
+      <div
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-3 gap-10 mt-20"
+      >
         <!--Card 1-->
         <div
           class="flex flex-col items-center gap-6 px-6 py-5 rounded-3xl shadow-main hover:bg-green-500 trasition duration-300"
