--- a/index.html
+++ b/index.html
@@ -500,8 +500,105 @@
 
     <!--Component 4 -->
     <div class="w-full" id="pricing">
-      <!-- Wide full-width container for additional content -->
+      <div class="container flex flex-col items-center gap-16 mx-auto my-32">
+        <div
+          class="grid w-full grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-y-8"
+        >
+          <!-- Stat blocks -->
+          <div>
+            <h3
+              class="font-extrabold text-5xl text-dark-grey-900 text-center leading-tight"
+            >
+              <span id="countto1" countto="250">250</span>+
+            </h3>
+            <p
+              class="text-base font-medium text-center text-gray-600 leading-7"
+            >
+              Hours Saved Stiing in the Bank
+            </p>
+          </div>
+          <div>
+            <h3
+              class="font-extrabold text-5xl text-dark-grey-900 text-center leading-tight"
+            >
+              <span id="countto2" countto="12">12</span>m
+            </h3>
+            <p
+              class="text-base font-medium text-center text-gray-600 leading-7"
+            >
+              Cache Saved
+            </p>
+          </div>
+          <div>
+            <h3
+              class="font-extrabold text-5xl text-dark-grey-900 text-center leading-tight"
+            >
+              <span id="countto3" countto="2600" data-decimal="1">2.8</span>k+
+            </h3>
+            <p
+              class="text-base font-medium text-center text-gray-600 leading-7"
+            >
+              Global Partners
+            </p>
+          </div>
+          <div>
+            <h3
+              class="font-extrabold text-5xl text-dark-grey-900 text-center leading-tight"
+            >
+              <span id="countto4" countto="18000">18000</span>+
+            </h3>
+            <p
+              class="text-base font-medium text-center text-gray-600 leading-7"
+            >
+              Happy Developers
+            </p>
+          </div>
+        </div>
+        <!-- End of stat Blocks -->
+      </div>
     </div>
+    <!-- Start of main grid component 4 -->
+    <div class="w-full">
+      <div class="container flex flex-col items-center gap-16 mx-auto my-32">
+        <div class="grid w-full grid-cols-1 lg:grid-cols-2 gap-32">
+          <div
+            class="bg-cover bg-center hidden lg:block rounded-3xl"
+            style="
+              background-image: url(/assets/component-4/getting-started.png);
+            "
+          ></div>
+          <div class="flex flex-col gap-16">
+            <div class="flex flex-col gap-2 text-center md:text-start">
+              <h2
+                class="text-3xl font-extrabold md:text-4xl lg:text-5xl text-dark-grey-900"
+              >
+                How Cache Works?
+              </h2>
+              <p class="text-base font-medium leading-7 text-dark-grey-600">
+                <span style="color: rgb(55, 65, 81); font-family: "
+                  >Cache Bank simplifies sign-up with a user-friendly website,
+                  streamlined account options, and an efficient verification
+                  process, making banking accessible and hassle-free for
+                  developers.</span
+                >
+              </p>
+            </div>
+            <div
+              class="grid w-full grid-cols-1 md:grid-cols-2 gap-y-16 gap-x-10"
+            >
+              <div class="flex flex-col items-start gap-1">
+                <div
+                  class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-green-500"
+                >
+                  <span class="text-base font-bold text-white">1</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!--Component 5 contact -->
     <div class="w-full" id="getStarted" id="company">
       <!-- Wide full-width container for additional content -->
