completed basic structure of component 4, working on responsiveness

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
     </div>
     <!-- Start of main grid component 4 -->
     <div class="w-full">
-      <div class="container flex flex-col items-center gap-16 mx-auto my-32">
+      <div class="container flex flex-col items-center w-full px-0">
         <div class="grid w-full grid-cols-1 lg:grid-cols-2 gap-32">
           <div
             class="bg-cover bg-center hidden lg:block rounded-3xl"
@@ -574,8 +574,10 @@
               >
                 How Cache Works?
               </h2>
-              <p class="text-base font-medium leading-7 text-dark-grey-600">
-                <span style="color: rgb(55, 65, 81); font-family: "
+              <p
+                class="text-base font-medium leading-7 text-dark-grey-600 max-sm:px-10"
+              >
+                <span
                   >Cache Bank simplifies sign-up with a user-friendly website,
                   streamlined account options, and an efficient verification
                   process, making banking accessible and hassle-free for
@@ -586,12 +588,71 @@
             <div
               class="grid w-full grid-cols-1 md:grid-cols-2 gap-y-16 gap-x-10"
             >
-              <div class="flex flex-col items-start gap-1">
+              <!--1st block -->
+              <div class="flex flex-col items-center md:items-start gap-1">
                 <div
                   class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-green-500"
                 >
                   <span class="text-base font-bold text-white">1</span>
                 </div>
+                <h3 class="font-bold text-dark-grey-900 text-base leading-7">
+                  Visit Cache Bank Website
+                </h3>
+                <p
+                  class="text-base font-medium text-dark-grey-600 max-sm:text-center max-sm:px-10"
+                >
+                  Go to Cache Bank, click "sign Up" or "Open an Account"
+                </p>
+              </div>
+              <!--2nd block -->
+              <div class="flex flex-col items-center md:items-start gap-1">
+                <div
+                  class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-pink-500"
+                >
+                  <span class="text-base font-bold text-white">2</span>
+                </div>
+                <h3 class="font-bold text-dark-grey-900 text-base leading-7">
+                  Choose Account Type
+                </h3>
+                <p
+                  class="text-base font-medium text-dark-grey-600 max-sm:text-center max-sm:px-10"
+                >
+                  Select from checking, savings,or developer-specific accounts.
+                </p>
+              </div>
+              <!--3rd block -->
+              <div class="flex flex-col items-center md:items-start gap-1">
+                <div
+                  class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-pink-500"
+                >
+                  <span class="text-base font-bold text-white">3</span>
+                </div>
+                <h3 class="font-bold text-dark-grey-900 text-base leading-7">
+                  Provide Personal Information
+                </h3>
+                <p
+                  class="text-base font-medium text-dark-grey-600 max-sm:text-center max-sm:px-10"
+                >
+                  Complete the form with your details and identification for
+                  security.
+                </p>
+              </div>
+              <!--4th block -->
+              <div class="flex flex-col items-center md:items-start gap-1">
+                <div
+                  class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-green-500"
+                >
+                  <span class="text-base font-bold text-white">4</span>
+                </div>
+                <h3 class="font-bold text-dark-grey-900 text-base leading-7">
+                  Verify and Submit
+                </h3>
+                <p
+                  class="text-base font-medium text-dark-grey-600 max-sm:text-center max-sm:px-10"
+                >
+                  Check your Information, agree to the terms, and submit for
+                  account approval.
+                </p>
               </div>
             </div>
           </div>
