added more responsive styles to component 4 using max-sm/md/lg

--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
               class="grid w-full grid-cols-1 md:grid-cols-2 gap-y-16 gap-x-10"
             >
               <!--1st block -->
-              <div class="flex flex-col items-center md:items-start gap-1">
+              <div class="flex flex-col items-center lg:items-start gap-1">
                 <div
                   class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-green-500"
                 >
@@ -599,13 +599,13 @@
                   Visit Cache Bank Website
                 </h3>
                 <p
-                  class="text-base font-medium text-dark-grey-600 max-sm:text-center max-sm:px-10"
+                  class="text-base font-medium text-dark-grey-600 max-sm:text-center max-sm:px-10 max-lg:text-center"
                 >
                   Go to Cache Bank, click "sign Up" or "Open an Account"
                 </p>
               </div>
               <!--2nd block -->
-              <div class="flex flex-col items-center md:items-start gap-1">
+              <div class="flex flex-col items-center lg:items-start gap-1">
                 <div
                   class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-pink-500"
                 >
@@ -615,15 +615,15 @@
                   Choose Account Type
                 </h3>
                 <p
-                  class="text-base font-medium text-dark-grey-600 max-sm:text-center max-sm:px-10"
+                  class="text-base font-medium text-dark-grey-600 max-sm:text-center max-sm:px-10 max-lg:text-center"
                 >
                   Select from checking, savings,or developer-specific accounts.
                 </p>
               </div>
               <!--3rd block -->
-              <div class="flex flex-col items-center md:items-start gap-1">
+              <div class="flex flex-col items-center lg:items-start gap-1">
                 <div
-                  class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-pink-500"
+                  class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-pink-500 max-sm:bg-green-500"
                 >
                   <span class="text-base font-bold text-white">3</span>
                 </div>
@@ -631,16 +631,16 @@
                   Provide Personal Information
                 </h3>
                 <p
-                  class="text-base font-medium text-dark-grey-600 max-sm:text-center max-sm:px-10"
+                  class="text-base font-medium text-dark-grey-600 max-sm:text-center max-sm:px-10 max-lg:text-center"
                 >
                   Complete the form with your details and identification for
                   security.
                 </p>
               </div>
               <!--4th block -->
-              <div class="flex flex-col items-center md:items-start gap-1">
+              <div class="flex flex-col items-center lg:items-start gap-1">
                 <div
-                  class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-green-500"
+                  class="flex items-center justify-center w-12 h-12 rounded-full mb-2 bg-green-500 max-sm:bg-pink-500"
                 >
                   <span class="text-base font-bold text-white">4</span>
                 </div>
@@ -648,7 +648,7 @@
                   Verify and Submit
                 </h3>
                 <p
-                  class="text-base font-medium text-dark-grey-600 max-sm:text-center max-sm:px-10"
+                  class="text-base font-medium text-dark-grey-600 max-sm:text-center max-sm:px-10 max-lg:text-center"
                 >
                   Check your Information, agree to the terms, and submit for
                   account approval.
