--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+  <!DOCTYPE html>
   <meta charset="utf-8" />
   <meta
     name="viewport"
@@ -125,21 +126,25 @@
           <a
             class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
             href="#product"
+            class="toggle-nav-links"
             >Product</a
           >
           <a
             class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
             href="#features"
+            class="toggle-nav-links"
             >Features</a
           >
           <a
             class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
             href="#pricing"
+            class="toggle-nav-links"
             >Get Started</a
           >
           <a
             class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
             href="#contact"
+            class="toggle-nav-links"
             >Contact</a
           >
 
@@ -164,7 +169,7 @@
       id="product"
     >
       <div
-        class="flex flex-col justify-center col-span-1 text-center lg:text-start"
+        class="flex flex-col justify-center text-center col-span-1 lg:text-start"
       >
         <h1
           class="mb-8 text-4xl font-extrabold leading-tight lg:text-6xl text-dark-grey-900"
@@ -190,9 +195,8 @@
           </button>
         </div>
       </div>
-      <div class="items-center justify-end hidden col-span-1 md:flex">
+      <div class="sm:hidden col-span-1 md:flex">
         <img
-          class="rounded-md"
           src="/assets/component-2/hero-image.png"
           alt="colourful cartoon of a lady sitting at a computer with dollar signs above and on the screen"
         />
@@ -502,67 +506,61 @@
     </div>
 
     <!--Component 4 -->
-    <div class="w-full" id="pricing">
-      <div class="container flex flex-col items-center gap-16 mx-auto my-32">
-        <div
-          class="grid w-full grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-y-8"
-        >
-          <!-- Stat blocks -->
-          <div>
-            <h3
-              class="font-extrabold text-5xl text-dark-grey-900 text-center leading-tight"
-            >
-              <span id="countto1" countto="250">250</span>+
-            </h3>
-            <p
-              class="text-base font-medium text-center text-gray-600 leading-7"
-            >
-              Hours Saved Stiing in the Bank
-            </p>
-          </div>
-          <div>
-            <h3
-              class="font-extrabold text-5xl text-dark-grey-900 text-center leading-tight"
-            >
-              <span id="countto2" countto="12">12</span>m
-            </h3>
-            <p
-              class="text-base font-medium text-center text-gray-600 leading-7"
-            >
-              Cache Saved
-            </p>
-          </div>
-          <div>
-            <h3
-              class="font-extrabold text-5xl text-dark-grey-900 text-center leading-tight"
-            >
-              <span id="countto3" countto="2600" data-decimal="1">2.8</span>k+
-            </h3>
-            <p
-              class="text-base font-medium text-center text-gray-600 leading-7"
-            >
-              Global Partners
-            </p>
-          </div>
-          <div>
-            <h3
-              class="font-extrabold text-5xl text-dark-grey-900 text-center leading-tight"
-            >
-              <span id="countto4" countto="18000">18000</span>+
-            </h3>
-            <p
-              class="text-base font-medium text-center text-gray-600 leading-7"
-            >
-              Happy Developers
-            </p>
-          </div>
+
+    <div
+      class="w-full container flex flex-col items-center gap-16 mx-auto my-32"
+      id="pricing"
+    >
+      <div
+        class="grid w-full grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-y-8"
+      >
+        <!-- Stat blocks -->
+        <div>
+          <h3
+            class="font-extrabold text-5xl text-dark-grey-900 text-center leading-tight"
+          >
+            <span id="countto1" countto="250">250</span>+
+          </h3>
+          <p class="text-base font-medium text-center text-gray-600 leading-7">
+            Hours Saved Stiing in the Bank
+          </p>
         </div>
-        <!-- End of stat Blocks -->
+        <div>
+          <h3
+            class="font-extrabold text-5xl text-dark-grey-900 text-center leading-tight"
+          >
+            <span id="countto2" countto="12">12</span>m
+          </h3>
+          <p class="text-base font-medium text-center text-gray-600 leading-7">
+            Cache Saved
+          </p>
+        </div>
+        <div>
+          <h3
+            class="font-extrabold text-5xl text-dark-grey-900 text-center leading-tight"
+          >
+            <span id="countto3" countto="2600" data-decimal="1">2.8</span>k+
+          </h3>
+          <p class="text-base font-medium text-center text-gray-600 leading-7">
+            Global Partners
+          </p>
+        </div>
+        <div>
+          <h3
+            class="font-extrabold text-5xl text-dark-grey-900 text-center leading-tight"
+          >
+            <span id="countto4" countto="18000">18000</span>+
+          </h3>
+          <p class="text-base font-medium text-center text-gray-600 leading-7">
+            Happy Developers
+          </p>
+        </div>
       </div>
     </div>
+    <!-- End of stat Blocks -->
     <!-- Start of main grid component 4 -->
     <div class="container w-full">
-      <div class="container flex flex-col items-center w-full px-0">
+      <div class="container w-full flex flex-col items-center w-full px-0">
         <div class="grid w-full grid-cols-1 lg:grid-cols-2 gap-32">
           <div
             class="bg-cover bg-center hidden lg:block rounded-3xl"
@@ -918,11 +916,25 @@
       </div>
     </footer>
     <script>
-      document
-        .getElementById("mobile-menu-toggle")
-        .addEventListener("click", function () {
-          document.getElementById("mobile-menu").classList.toggle("hidden");
+      //document
+      //.getElementById("mobile-menu-toggle")
+      //.addEventListener("click", function () {
+      //document.getElementById("mobile-menu").classList.toggle("hidden");
+      //});
+
+      const mobileMenuToggle = document.getElementById("mobile-menu-toggle");
+      const mobileMenu = document.getElementById("mobile-menu");
+      const navLinks = document.querySelectorAll(".toggle-nav-links");
+
+      mobileMenuToggle.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
+      });
+
+      navLinks.forEach((link) => {
+        link.addEventListener("click", () => {
+          mobileMenu.classList.toggle("hidden");
         });
+      });
     </script>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/plugins/countup.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/motion-tailwind/scripts/countto.js"></script>
