--- a/index.html
+++ b/index.html
@@ -124,27 +124,23 @@
           id="mobile-menu"
         >
           <a
-            class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+            class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900 toggle-nav-links"
             href="#product"
-            class="toggle-nav-links"
             >Product</a
           >
           <a
-            class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+            class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900 toggle-nav-links"
             href="#features"
-            class="toggle-nav-links"
             >Features</a
           >
           <a
-            class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+            class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900 toggle-nav-links"
             href="#pricing"
-            class="toggle-nav-links"
             >Get Started</a
           >
           <a
-            class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
+            class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900 toggle-nav-links"
             href="#contact"
-            class="toggle-nav-links"
             >Contact</a
           >
 
@@ -916,12 +912,6 @@
       </div>
     </footer>
     <script>
-      //document
-      //.getElementById("mobile-menu-toggle")
-      //.addEventListener("click", function () {
-      //document.getElementById("mobile-menu").classList.toggle("hidden");
-      //});
-
       const mobileMenuToggle = document.getElementById("mobile-menu-toggle");
       const mobileMenu = document.getElementById("mobile-menu");
       const navLinks = document.querySelectorAll(".toggle-nav-links");
