--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <html class="scroll-smooth">
   <body class="bg-gray-100">
     <!--Component 1 -->
-    <div class="mx-auto bg-white">
+    <div class="w-full top-0 mx-auto bg-white">
       <!-- Main container with navigation and header content -->
       <div
         class="relative flex flex-wrap items-center justify-between w-full shrink-0"
@@ -556,10 +556,10 @@
     <!-- End of stat Blocks -->
     <!-- Start of main grid component 4 -->
     <div class="container w-full">
-      <div class="container w-full flex flex-col items-center w-full px-0">
+      <div class="container flex flex-col items-center w-full px-0">
         <div class="grid w-full grid-cols-1 lg:grid-cols-2 gap-32">
           <div
-            class="bg-cover bg-center hidden lg:block rounded-3xl"
+            class="bg-contain bg-no-repeat bg-center hidden lg:block rounded-3xl"
             style="
               background-image: url(/assets/component-4/getting-started.png);
             "
