made nav bar static for user ease and adjusted padding on tagged items so that when using Nav the user is sent to a full screen of the right section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <html class="scroll-smooth">
   <body class="bg-gray-100">
     <!--Component 1 -->
-    <div class="w-full top-0 mx-auto bg-white">
+    <div class="fixed w-full top-0 mx-auto bg-white">
       <!-- Main container with navigation and header content -->
       <div
         class="relative flex flex-wrap items-center justify-between w-full shrink-0"
@@ -161,7 +161,7 @@
     <!--Component 2 -->
     <!--Hero section-->
     <div
-      class="container grid w-full grid-cols-1 my-auto mt-12 mb-8 md:grid-cols-2 xl:gap-14 md:gap-5"
+      class="container grid w-full grid-cols-1 my-auto pt-20 mb-8 md:grid-cols-2 xl:gap-14 md:gap-5"
       id="product"
     >
       <div
@@ -191,7 +191,7 @@
           </button>
         </div>
       </div>
-      <div class="sm:hidden col-span-1 md:flex">
+      <div class="hidden col-span-1 md:flex">
         <img
           src="/assets/component-2/hero-image.png"
           alt="colourful cartoon of a lady sitting at a computer with dollar signs above and on the screen"
@@ -504,7 +504,7 @@
     <!--Component 4 -->
 
     <div
-      class="w-full container flex flex-col items-center gap-16 mx-auto my-32"
+      class="w-full container flex flex-col items-center gap-16 mx-auto py-20"
       id="pricing"
     >
       <div
@@ -663,7 +663,7 @@
     <!--contact section-->
     <div class="w-full">
       <div
-        class="container mx-auto my-32 flex flex-col items-center justify-center"
+        class="container mx-auto max-sm:mt-0 my-32 max-sm:pt-20 flex flex-col items-center justify-center"
         id="contact"
       >
         <div
